# base_cryptoFOIV

./: LICENSE  README.md  pyproject.toml
cryptoFOIV/crypto/: models.py
cryptoFOIV/crypto/migrations/: 0001_initial.py
cryptoFOIV/mysite/: settings.py  urls.py
